{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 226,
  "lineage": "19aaf5ca-d517-9d4e-bd8f-d7743dc59d68",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d1d5c91ef5cc4854",
            "owner_id": "748762807827",
            "tags": {
              "Environment": "dev",
              "Name": "eks-dev-igw",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-cluster": "shared"
            },
            "vpc_id": "vpc-041654dc90a63df4a"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04a2b587934cb15b0",
            "owner_id": "748762807827",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1d5c91ef5cc4854",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "eks-dev-rtb",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-cluster": "shared"
            },
            "vpc_id": "vpc-041654dc90a63df4a"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtba",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c76b645c77e5575",
            "route_table_id": "rtb-04a2b587934cb15b0",
            "subnet_id": "subnet-0ae9e1a112cbfa7ec"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf88541cfe57cd8f",
            "route_table_id": "rtb-04a2b587934cb15b0",
            "subnet_id": "subnet-02d932e2836915aa3"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ae4bb6d1636c267",
            "route_table_id": "rtb-04a2b587934cb15b0",
            "subnet_id": "subnet-00197cd7063344035"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster-master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:748762807827:security-group/sg-08d7720ab2d386084",
            "description": "EKS cluster master security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d7720ab2d386084",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cluster-master",
            "name_prefix": null,
            "owner_id": "748762807827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "eks-master-sg",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-041654dc90a63df4a"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster-nodes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:748762807827:security-group/sg-0d0a6f7b979223f5f",
            "description": "EKS cluster nodes security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0a6f7b979223f5f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster master to access cluster nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d7720ab2d386084"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow cluster master to access cluster nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-08d7720ab2d386084"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow inter pods communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "cluster-nodes",
            "name_prefix": null,
            "owner_id": "748762807827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "eks-nodes-sg",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-041654dc90a63df4a"
          },
          "depends_on": [
            "aws_security_group.cluster-master",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:748762807827:subnet/subnet-0ae9e1a112cbfa7ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0ae9e1a112cbfa7ec",
            "map_public_ip_on_launch": true,
            "owner_id": "748762807827",
            "tags": {
              "Environment": "dev",
              "Name": "eks-dev-subnet-1",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-cluster": "shared"
            },
            "vpc_id": "vpc-041654dc90a63df4a"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:748762807827:subnet/subnet-02d932e2836915aa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02d932e2836915aa3",
            "map_public_ip_on_launch": true,
            "owner_id": "748762807827",
            "tags": {
              "Environment": "dev",
              "Name": "eks-dev-subnet-2",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-cluster": "shared"
            },
            "vpc_id": "vpc-041654dc90a63df4a"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:748762807827:subnet/subnet-00197cd7063344035",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00197cd7063344035",
            "map_public_ip_on_launch": true,
            "owner_id": "748762807827",
            "tags": {
              "Environment": "dev",
              "Name": "eks-dev-subnet-3",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-cluster": "shared"
            },
            "vpc_id": "vpc-041654dc90a63df4a"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:748762807827:vpc/vpc-041654dc90a63df4a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0554070808cee992e",
            "default_route_table_id": "rtb-08905181c9749ae98",
            "default_security_group_id": "sg-06f8fcb22c66bab4f",
            "dhcp_options_id": "dopt-31eb094a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-041654dc90a63df4a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08905181c9749ae98",
            "owner_id": "748762807827",
            "tags": {
              "Environment": "dev",
              "Name": "eks-dev-vpc",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}